Fix : Hamburger overflow

--- a/src/Styles/Hamburger.module.css
+++ b/src/Styles/Hamburger.module.css
@@ -11,7 +11,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   overflow: hidden;
 }
 
